[tool.poetry]
name = "async-python"
version = "0.1.0"
description = ""
authors = ["Victor Pires <vctprs@gmail.com>"]
readme = "README.md"
packages = [{include = "async_python"}]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^18.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
